crates/stayhydated-dioxus-core/tests/ui/link_target_string_href.stderr
error[E0308]: mismatched types
 --> tests/ui/link_target_string_href.rs:6:36
  |
6 |     let _: LinkTarget<TestRoute> = "/";
  |            ---------------------   ^^^ expected `LinkTarget<TestRoute>`, found `&str`
  |            |
  |            expected due to this
  |
  = note:   expected enum `LinkTarget<TestRoute>`
          found reference `&'static str`
