crates/stayhydated-dioxus-core/tests/ui/link_target_string_href.rs
use stayhydated_dioxus_core::LinkTarget;

struct TestRoute;

fn main() {
    let _: LinkTarget<TestRoute> = "/";
}
